--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "homepage": "https://github.com/christopher-coyne/meaculpa#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "date-fns": "^2.28.0",
+    "eslint": "^8.16.0",
     "express": "^4.17.2",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15"
   }
 }
