--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.28.0",
     "eslint": "^8.16.0",
     "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4"
   },
